--- a/static/scss/03_objects/_image.scss
+++ b/static/scss/03_objects/_image.scss
@@ -15,6 +15,18 @@ img {
       opacity: .9;
     }
   }
+  &--snippers { // for images on the right through shortcode image-snippers.html
+    width: 33%;
+    height: 100%;
+    max-height: 10rem;
+    object-fit: cover;
+    float: right;
+    margin-left: vr(4);
+
+    @include bp(large) {
+    width: calc(100% - var(--max-width));
+    }
+  }
 }
 
 .o-img--cover,
